# internal-tool-rust-boilerplate

./: .example.config.yaml  .example.secret.yaml  .gitignore  Cargo.toml  README.md
actix_api/: Cargo.toml
actix_api/src/: main.rs  state.rs
actix_api/src/handler/: backend_portal.rs  mod.rs
internal/: Cargo.toml
internal/src/: config.rs  lib.rs  result.rs  secret.rs
internal/src/model/: backend_portal.rs
internal/src/port/: backend_portal.rs
internal/src/respository/: backend_portal.rs
internal/src/service/: backend_portal.rs
