[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = {version="1.0.0", features=["full"]}
reqwest = {version="0.12.9", features = ["json", "blocking"] }
serde = {version="1.0.215", features = ["derive"]}
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["full"] }
